# SQL-ITT

./: CMakeLists.txt  README.md  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkhandler.cpp  networkhandler.h  uilogic.cpp  uilogic.h
